--- a/index.ipynb
+++ b/index.ipynb
@@ -6,12 +6,11 @@
    "source": [
     "### Data Set Information:\n",
     "\n",
-    "The dataset consists of feature vectors belonging to 12,330 sessions.\n",
-    "The dataset was formed so that each session\n",
-    "would belong to a different user in a 1-year period to avoid\n",
-    "any tendency to a specific campaign, special day, user\n",
-    "profile, or period.\n",
+    "Source: [UCI Machine Learning Repository](https://archive.ics.uci.edu/ml/datasets/Online+Shoppers+Purchasing+Intention+Dataset)\n",
     "\n",
+    "[Citation](works_cited.html): Sakar, C.O., Polat, S.O., Katircioglu, M. et al. Neural Comput & Applic (2018). [Web Link](https://link.springer.com/article/10.1007%2Fs00521-018-3523-0)\n",
+    "\n",
+    "The dataset consists of feature vectors belonging to 12,330 sessions. It was formed so that each session would belong to a different user in a 1-year period to avoid any tendency to a specific campaign, special day, user profile, or period.\n",
     "\n",
     "### Attribute Information:\n",
     "\n",
